--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,4 +8,6 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "こんにちは"
+      - run: |
+          echo "こんにちは"
+          exit 1
